2008-04-14  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_tile_req):
	made messages about killed plug-ins due to invalid tile requests
	more verbose. They are good for debugging only and not translated,
	so more info can't hurt. Also fail (kill the plug-in) if a tile is
	requested that lives on the undo stack.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppolygonselecttool.c: formatting.

2008-04-14  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppolygonselecttool.c
	(gimp_polygon_select_tool_button_release): simplify and fix logic
	to do the "right" thing. Hard to describe, try youself ;)

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: introduced a #define for the spacing
	between the icon and the statusbar label.

2008-04-14  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpmemsize.c: #undef GIMP_DISABLE_DEPRECATED so
	gimp_memsize_to_string() sees its own prototype.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_label_expose): fixed
	icon placement for right-to-left render direction.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch]: rewritten the code that draws
	the icon in the statusbar label. The new code gives nicer spacing.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg.h
	* plug-ins/jpeg/jpeg-exif.c
	* plug-ins/jpeg/jpeg-load.c: rotate the thumbnail according to the
	EXIF orientation as required by the updated thumbnail spec.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_show_tooltip)
	* app/display/gimpstatusbar.c (gimp_statusbar_progress_start)
	* app/gui/gui.c (gui_menu_show_tooltip): push a NULL stock-id.

2008-04-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_label_expose): added
	a sanity check.

	* app/display/gimpdisplayshell-layer-select.c: formatting.
