@@ -1,3 +1,8 @@
+2008-04-14  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/gimpplugin-message.c: renamed
+	gimp_plug_in_handle_tile_req() to gimp_plug_in_handle_tile_request().
+
 2008-04-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_tile_req):
